# punchline

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/client/: Cargo.toml
crates/client/src/: cli.rs  config.rs  handshake.rs  identity.rs  lib.rs  main.rs  message.rs  peers.rs  punch.rs  signal.rs  stun.rs  style.rs  tui.rs
crates/client/src/commands/: completions.rs  config.rs  connect.rs  keygen.rs  mod.rs  peers.rs  pubkey.rs  status.rs
crates/client/src/tui/: app.rs  events.rs  mod.rs
crates/client/src/tui/render/: chat.rs  connecting.rs  mod.rs
crates/proto/: Cargo.toml
crates/proto/src/: crypto.rs  error.rs  lib.rs  signal.rs  stun.rs  transport.rs  udp.rs
crates/signald/: Cargo.toml
crates/signald/src/: cli.rs  main.rs
crates/stund/: Cargo.toml
crates/stund/src/: cli.rs  main.rs
