[package]
name = "punchline-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chacha20poly1305 = "0.10.1"
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6.0"
crossterm = "0.29.0"
dirs = "6.0.0"
ed25519-dalek = "2.2.0"
hex = "0.4.3"
hkdf = "0.12.4"
punchline-proto = { path = "../proto" }
rand_core = { version = "0.6", features = ["getrandom"] }
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
toml = "1.0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
tungstenite = "0.28.0"
x25519-dalek = "2.0.1"
