[package]
name = "punchline"
version = "0.1.0"
edition = "2024"
description = "P2P encrypted TUI messenger using Noise IK over UDP"
license = "MIT"
repository = "https://github.com/michal-pielka/punchline"
readme = "../../README.md"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6.0"
crossterm = "0.29.0"
dirs = "6.0.0"
hex = "0.4.3"
punchline-proto = { path = "../proto", version = "0.1.0" }
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
snow = "0.10.0"
toml = "1.0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
tungstenite = "0.28.0"
