[package]
name = "punchline-proto"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

[dev-dependencies]
serde_json = "1.0"
