[package]
name = "punchline-signald"
version = "0.1.0"
edition = "2024"
description = "Signaling server for punchline P2P messenger"
license = "MIT"
repository = "https://github.com/michal-pielka/punchline"
readme = "../../README.md"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
punchline-proto = { path = "../proto", version = "0.1.0" }
serde_json = "1.0.149"
tracing = "0.1"
tracing-subscriber = "0.3"
tungstenite = "0.28.0"
